<resources>
    <string name="app_name">Calculadora para Madera</string>
    <string name="inches_width">Ancho en pulgadas</string>
    <string name="inches_large">Largo en pulgadas</string>
    <string name="thickness_wood">Grosor en pulgadas</string>
    <string name="option_wooden">Precio de la madera por pie2</string>
    <string name="calculate">Calcular</string>
    <string name="price_this">El precio es: %.2f</string>
    <string name="number_warning">Ingrese un numero valido por favor</string>
    <string name="price_calculate_fail">el calculo fallo, revise que esten todos los datos requeridos</string>
    <string name="square">Cuadrado</string>
    <string name="rectangle">Rectangular</string>
    <string name="title_calculate_price">Calcular Precio</string>
    <string name="select_style">Elegi tu estilo de corte</string>
</resources>