<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="?attr/colorPrimaryContainer"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_inches_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/inches_width"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_inches_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_inches_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/inches_large"
            app:layout_constraintTop_toBottomOf="@id/text_field_inches_width">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_inches_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_inches_thickness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/thickness_wood"
            app:layout_constraintTop_toBottomOf="@id/text_field_inches_large">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_inches_thickness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_price_wood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/option_wooden"
            app:layout_constraintTop_toBottomOf="@id/text_inches_thickness">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_price_wood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            app:cornerRadius="6dp"
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="40dp"
            android:text="@string/calculate"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/text_price_wood" />

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_calculate"
            tools:text="El precio es: 4400" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>